# ChangeLog for sys-fs/udisks
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.72 2012/04/20 18:48:07 ssuominen Exp $

  20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.0.4-r2.ebuild,
  udisks-1.94.0-r1.ebuild:
  Require at least sys-apps/util-linux >= 2.20.1-r2 wrt #403073

  20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.0.4-r2.ebuild,
  udisks-1.94.0-r1.ebuild:
  Run pkg_setup() test for kernel opts also for arm, ppc and ppc64. 

*udisks-1.94.0-r1 (20 Apr 2012)

  20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.94.0-r1.ebuild:
  Missing runtime dependencies; see inside the ebuild and
  http://bugs.freedesktop.org/show_bug.cgi?id=48842#c5 for reference.

  18 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.94.0.ebuild:
  Missing sys-apps/acl runtime dependency for setfacl(1) command. This will
  be replaced with libacl usage on 1.95.0. This will require kernels to be
  built with CONFIG_TMPFS_POSIX_ACL=y option because /run is used which
  should be on a tmpfs filesystem. See,
  http://bugs.gentoo.org/412377
  http://bugs.freedesktop.org/show_bug.cgi?id=48842
  http://cgit.freedesktop.org/udisks/commit/?id=15250f35ff8770389cc579c304fbcac9beebc203

*udisks-1.94.0 (11 Apr 2012)

  11 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.94.0.ebuild:
  Version bump.

  28 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  udisks-1.93.0.ebuild:
  Add gdbus-codegen build-time dep (bug #409923, thanks to Trevor Bowen).

*udisks-1.93.0 (27 Mar 2012)

  27 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.93.0.ebuild,
  +files/udisks-2.x-ntfs-3g.patch, metadata.xml:
  Version bump wrt #407723

*udisks-1.0.4-r2 (23 Jan 2012)

  23 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.0.4-r2.ebuild:
  Move umount.udisks from /sbin to /usr/sbin wrt #398081 by Michał Górny
