@@ -4,23 +4,21 @@ Hash: SHA1
 AUX udisks-1.0.2-ntfs-3g.patch 198 RMD160 e4b5cb3386184edf90bce5140a1c414ef5e99210 SHA1 d3ee3999b9d0437a6022d85d4535fc72632f6258 SHA256 1db923f52619c2dcc6c30ffedcd47dedce048dbec2eb781088738e51f8dc0539
 AUX udisks-2.x-ntfs-3g.patch 147 RMD160 6e81c4e0d1f8935b8db63fae2a51ec6b92a1cc37 SHA1 d827c4bdb80b41dec8a571c02468634042bad6c3 SHA256 62891ef17a4ee404e6d827ee38f8c2d8115fc8a847ef2ba842118c81b779ffad
 DIST udisks-1.0.4.tar.gz 719889 RMD160 163a8046fcc7f30d48b8272859ab0d09a88f179a SHA1 10d2acfd6e6ff4c8d9d962af1fb1856a885e3219 SHA256 854b89368733b9c3a577101b761ad5397ae75a05110c8698ac5b29de9a8bf8f5
-DIST udisks-1.93.0.tar.bz2 587488 RMD160 b6848d6ce809712f018d96af691cedb99c91f1d4 SHA1 4e8c48ee043e46d8f8e6a6c1e31cb232736a34a0 SHA256 e2264d06bbf5399d243b0f91628881fa1d95d1a512b2af26f5ab074caf6327d7
 DIST udisks-1.94.0.tar.bz2 590375 RMD160 0e3832294b3ddb12a05ec251b66d1bb8c9088204 SHA1 6c76488776edbc5671a4b03a37ed61dac451211e SHA256 e58193c2f2f4fba030b6dd684708352b1eccf6826843e42899a26fef4249b0bc
 EBUILD udisks-1.0.4-r1.ebuild 2032 RMD160 04d090ed0171f8f325fd56552c894422adb4d49b SHA1 dde90f398bab1eef95e18720eca31725e5adfcca SHA256 cda270fa2ede1c1bff53b7e67ab608f78bc831d2c0f2916afbe3ab3d9350db6c
 EBUILD udisks-1.0.4-r2.ebuild 2253 RMD160 f9a1562b63cf8e0ef225e6bc39292dcb82d6f496 SHA1 f07fde95a9c3bb515d37712e21de58969fa8dac9 SHA256 492d9e4b480b1b4def82fb196b06b481fa7ab9e79b76706a2bebeb4435681527
-EBUILD udisks-1.93.0.ebuild 1926 RMD160 05ae131bc57f78ad0dc568c9bae091fb73b7e681 SHA1 aa32bd1ee11c6aaa0d37120f0082cd8c8a433c5e SHA256 e2be2273a3174f166a41f25c43f9d9602347fd645f7d73ad0edd477f4e41a9ce
 EBUILD udisks-1.94.0-r1.ebuild 2414 RMD160 611ef4d442fa96aaea327081032182e795e94ba6 SHA1 db476f3336a3b76c4afaa95f08a5a75270d5aaf1 SHA256 ce15fa257a4101e7a509c9efda0a07cae154178e417fc9e6ce9f307ccf5667ae
 EBUILD udisks-1.94.0.ebuild 2092 RMD160 840af32b9e2c8454e497cbf5eecb7e1467fd5ec7 SHA1 0f25a2c96e3a3e52d6321ddc447858bae380cd0c SHA256 8f5223b2b6f3ba72d45cbd5d3e0266e3d643e0f45bd95d5154631d825538d5d0
-MISC ChangeLog 10341 RMD160 8c43b8a46edb8516453887510f51f6bac514ecf2 SHA1 3041895d5bbbd6e6bb0cfd122f0762561103f7bd SHA256 eff8618fa679a503d9280c3f550b8dd7f974785686c215889447ba02ae4d8f78
+MISC ChangeLog 10425 RMD160 6bbaa2ac08a29220d141aa814afc17ebdc8ad135 SHA1 a50a4b6d181fd689a6b9ba562e02840167e9248d SHA256 39350f79a7c7036102e9c5fee7dbdf077551e28abc0bc43fd3256a342edfda3f
 MISC metadata.xml 465 RMD160 711189a7c9e9ca05ca9cfee7998a90c06511b3d3 SHA1 44ee701c4871c8eef4c76f30ebc5c8a0e8d858ba SHA256 bb99d5d24ef919a8643d6e08ec23aa209114442d14713dce32a43dd052f96116
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPka8JAAoJEEdUh39IaPFN0P0H/RinRsTb7RvOCYDG4G39AzRV
-yWPSMsILefE0Kdoz8lhhe0zT7zZpsrOw67jipmg/VzQYxe7rDkhgJ+0Dp3MrLeA5
-FSpgUPJbTNvEUWGXmfoo3apLvUa/lqQFXJD1O+B40riVpimqJlwof93PLdqLQTgZ
-gvBe+0ZrlzMMnNgZfYIr22KFmFfOyW46Wbpgvy+1gsto3sONxtlc9qvZlnBBJPGS
-O4gOiSepr/EltU+OSFc3XEt3SZIhHvHWI8j/dJcZT66NKKqrFuAiASJNip9PC8sp
-5pKq7xiwj6Jy847z6U56aQ+Py4eXsU2Yu4nBUXGQUXT5gy5Pyo8DJIfRwrdLPco=
-=KrVV
+iQEcBAEBAgAGBQJPka9LAAoJEEdUh39IaPFNuYsH/i6BVbTCIsh6gXHBZAmL6uIe
+S5xfGtfaJZh5t29Bn4bUZPdJoWR9RYzaNiFzaW2FbCDVHSCFpJ5hYJcSYrXGBzGi
+y2SH3TmxUOiOT3Jbd7z49xXz9cOqMw0nYYniu/4C7hq9CxDJV98dU3Ekn/Y2FlBK
+buRcbG4RmVChgH7Dr6BlyfuIjuDCcPjMrIC//75xdr2v61IoFttDNLhiWkenZ6GA
+iDHXRebZGT09QSfhbW/mKtNwqCbDqZ84fKWroxCh5xysN2JROx5ann4zXo+0dzs1
+zeVJOO7MGjiTFhOIujJknCINEpeSybe10JRR29iyKX3aQk6UU3DYcm3yN8d5omY=
+=SYnj
 -----END PGP SIGNATURE-----
