@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/udisks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.72 2012/04/20 18:48:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.73 2012/04/20 18:49:12 ssuominen Exp $
+
+  20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -udisks-1.93.0.ebuild:
+  old
 
   20 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.0.4-r2.ebuild,
   udisks-1.94.0-r1.ebuild:
